--- a/TFE/Base.lproj/Main.storyboard
+++ b/TFE/Base.lproj/Main.storyboard
@@ -114,7 +114,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="dJ2-js-3fG" secondAttribute="trailing" constant="20" id="LQx-SQ-yRz"/>
                             <constraint firstAttribute="trailingMargin" secondItem="c60-n4-dyY" secondAttribute="trailing" constant="20" id="fWk-X9-A6n"/>
                             <constraint firstItem="dJ2-js-3fG" firstAttribute="leading" secondItem="fkk-Fa-Iz2" secondAttribute="leadingMargin" constant="20" id="hJa-Zt-FQD"/>
-                            <constraint firstItem="Nnv-6Q-huV" firstAttribute="top" secondItem="1f1-tr-j2z" secondAttribute="bottom" constant="180" id="rpE-4I-1zG"/>
+                            <constraint firstItem="Nnv-6Q-huV" firstAttribute="top" secondItem="1f1-tr-j2z" secondAttribute="bottom" constant="180" id="oj6-Qb-eyr"/>
                             <constraint firstItem="c60-n4-dyY" firstAttribute="top" secondItem="dJ2-js-3fG" secondAttribute="bottom" constant="30" id="teO-jz-Snw"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Nnv-6Q-huV" secondAttribute="trailing" constant="20" id="vsP-b5-bju"/>
                         </constraints>
@@ -122,7 +122,8 @@
                     <navigationItem key="navigationItem" title="Search Settings" id="mgP-13-sxN">
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="WVb-ka-zMa">
                             <connections>
-                                <segue destination="rL7-72-qPe" kind="unwind" identifier="Save" unwindAction="unwindToSelfViewController:" id="hKy-Uu-OoY"/>
+                                <action selector="save:" destination="xt9-EP-PmL" id="SQs-e0-Ku5"/>
+                                <segue destination="OjU-NI-juH" kind="show" identifier="Save" id="Bw4-Hh-bGp"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -133,9 +134,8 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fiK-Gx-F3e" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="rL7-72-qPe" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="806" y="389"/>
+            <point key="canvasLocation" x="620" y="383"/>
         </scene>
         <!--Friend Table View Controller-->
         <scene sceneID="cvR-wP-aQt">
@@ -160,29 +160,21 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="bOV-nE-Cl0">
                         <nil key="title"/>
-                        <button key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="7QD-JE-1Mz">
-                            <rect key="frame" x="180" y="7" width="240" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="Set Search">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <connections>
-                                <segue destination="xt9-EP-PmL" kind="show" id="buE-ZY-rVI"/>
-                            </connections>
-                        </button>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="zy1-8g-a6d">
                             <connections>
-                                <action selector="addButtonTouched:" destination="OjU-NI-juH" id="osG-ea-EzH"/>
-                                <segue destination="CAL-bQ-3tP" kind="unwind" identifier="unwindToFriend" unwindAction="unwindToFriendTableViewController:" id="2bB-ip-Wzf"/>
+                                <action selector="unwind:" destination="OjU-NI-juH" id="AWc-Z7-ctv"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <segue destination="CAL-bQ-3tP" kind="unwind" identifier="Unwind" unwindAction="unwindToFriendTableViewController:" id="W7W-mX-PzW"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XL1-WS-Lz6" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="CAL-bQ-3tP" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1620" y="406"/>
+            <point key="canvasLocation" x="1495" y="392"/>
         </scene>
         <!--Friend Table-->
         <scene sceneID="46v-Xq-Kwb">
@@ -220,7 +212,7 @@
                         </button>
                         <barButtonItem key="rightBarButtonItem" title="Friends" id="PIn-0a-pKT">
                             <connections>
-                                <segue destination="OjU-NI-juH" kind="show" identifier="AddGroup" id="hIG-NU-9J6"/>
+                                <segue destination="xt9-EP-PmL" kind="show" id="qEa-Nm-eXj"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -340,7 +332,7 @@
                     <navigationItem key="navigationItem" title="Log In" id="6b2-DR-fde">
                         <barButtonItem key="rightBarButtonItem" title="Groups" id="v8r-V7-ptg">
                             <connections>
-                                <segue destination="wuR-fK-ud5" kind="show" id="B9u-YU-mFQ"/>
+                                <segue destination="wuR-fK-ud5" kind="show" identifier="LoggedIn" id="B9u-YU-mFQ"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
