--- a/SwipeCardView.xib
+++ b/SwipeCardView.xib
@@ -9,11 +9,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" restorationIdentifier="SwipeCardView" id="iN0-l3-epB" customClass="MDCSwipeToChooseView">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="638"/>
+            <rect key="frame" x="0.0" y="0.0" width="300" height="500"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Place's Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qUr-j8-VFk">
-                    <rect key="frame" x="0.0" y="488" width="126" height="27.5"/>
+                    <rect key="frame" x="10" y="320" width="126" height="28"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="xOD-if-8iN"/>
                     </constraints>
@@ -27,7 +27,7 @@
                     </variation>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Data" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zwS-9g-W4r">
-                    <rect key="frame" x="171" y="523" width="75" height="27.5"/>
+                    <rect key="frame" x="181" y="355" width="75" height="28"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="dAh-cb-RUn"/>
                     </constraints>
@@ -40,22 +40,8 @@
                         </mask>
                     </variation>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Data" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="884-N0-Zan">
-                    <rect key="frame" x="75" y="523" width="75" height="27.5"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="BW1-Vy-uas"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="20"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="BW1-Vy-uas"/>
-                        </mask>
-                    </variation>
-                </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No data" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NMV-tL-vs1">
-                    <rect key="frame" x="2" y="588" width="72.5" height="27.5"/>
+                    <rect key="frame" x="12" y="419" width="73" height="28"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="HvV-aK-04Z"/>
                     </constraints>
@@ -69,7 +55,7 @@
                     </variation>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categories" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hzy-wu-6xD">
-                    <rect key="frame" x="0.0" y="552" width="97.5" height="27.5"/>
+                    <rect key="frame" x="10" y="383" width="98" height="28"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="A5Y-5J-0wm"/>
                     </constraints>
@@ -82,14 +68,24 @@
                         </mask>
                     </variation>
                 </label>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BeetTorrent" translatesAutoresizingMaskIntoConstraints="NO" id="rcA-Ki-gWb">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rcA-Ki-gWb">
+                    <rect key="frame" x="10" y="10" width="280" height="300"/>
                     <constraints>
+                        <constraint firstAttribute="height" constant="300" id="Rq3-dc-Ts8"/>
+                        <constraint firstAttribute="height" constant="300" id="fkQ-88-vdM"/>
                         <constraint firstAttribute="width" secondItem="rcA-Ki-gWb" secondAttribute="height" multiplier="1:1" id="x3F-Mu-5Ng"/>
+                        <constraint firstAttribute="width" constant="300" id="xGe-On-UfC"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="fkQ-88-vdM"/>
+                            <exclude reference="x3F-Mu-5Ng"/>
+                            <exclude reference="xGe-On-UfC"/>
+                        </mask>
+                    </variation>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.2 mi." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Pb-TW-a0q">
-                    <rect key="frame" x="0.0" y="522" width="58.5" height="27.5"/>
+                    <rect key="frame" x="10" y="354" width="59" height="28"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="6gY-xu-kgd"/>
                     </constraints>
@@ -120,21 +116,35 @@
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Data" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="884-N0-Zan">
+                    <rect key="frame" x="85" y="355" width="75" height="28"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="BW1-Vy-uas"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="20"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="BW1-Vy-uas"/>
+                        </mask>
+                    </variation>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="Hzy-wu-6xD" firstAttribute="leading" secondItem="qUr-j8-VFk" secondAttribute="leading" id="0qc-cV-kcz"/>
-                <constraint firstItem="rcA-Ki-gWb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="2P5-WI-GzL"/>
+                <constraint firstItem="rcA-Ki-gWb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="2P5-WI-GzL"/>
                 <constraint firstItem="884-N0-Zan" firstAttribute="bottom" secondItem="zwS-9g-W4r" secondAttribute="bottom" id="4Cp-0K-3Y8"/>
                 <constraint firstAttribute="bottom" secondItem="qUr-j8-VFk" secondAttribute="bottom" constant="10" id="5uX-il-Wpz"/>
                 <constraint firstItem="NMV-tL-vs1" firstAttribute="top" secondItem="Hzy-wu-6xD" secondAttribute="bottom" constant="8.5" id="6ya-bS-0mI"/>
                 <constraint firstItem="884-N0-Zan" firstAttribute="bottom" secondItem="1Pb-TW-a0q" secondAttribute="bottom" constant="1" id="8aO-DW-jtS"/>
                 <constraint firstItem="884-N0-Zan" firstAttribute="leading" secondItem="1Pb-TW-a0q" secondAttribute="trailing" constant="16.5" id="KIR-7O-Der"/>
                 <constraint firstItem="qUr-j8-VFk" firstAttribute="leading" secondItem="rcA-Ki-gWb" secondAttribute="leading" id="KWE-jG-hTW"/>
-                <constraint firstItem="qUr-j8-VFk" firstAttribute="top" secondItem="rcA-Ki-gWb" secondAttribute="bottom" constant="8" id="Q1z-HU-2h6"/>
+                <constraint firstItem="qUr-j8-VFk" firstAttribute="top" secondItem="rcA-Ki-gWb" secondAttribute="bottom" constant="10" id="Q1z-HU-2h6"/>
                 <constraint firstItem="qUr-j8-VFk" firstAttribute="leading" secondItem="Hzy-wu-6xD" secondAttribute="trailing" constant="-117" id="QPA-hg-Mf2"/>
                 <constraint firstItem="Hzy-wu-6xD" firstAttribute="top" secondItem="1Pb-TW-a0q" secondAttribute="bottom" constant="2.5" id="TyA-6E-jxh"/>
-                <constraint firstItem="rcA-Ki-gWb" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="VfT-NP-BsL"/>
+                <constraint firstItem="rcA-Ki-gWb" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="VfT-NP-BsL"/>
                 <constraint firstItem="qUr-j8-VFk" firstAttribute="leading" secondItem="1Pb-TW-a0q" secondAttribute="leading" id="ZZd-hz-F3M"/>
                 <constraint firstItem="Hzy-wu-6xD" firstAttribute="leading" secondItem="1Pb-TW-a0q" secondAttribute="trailing" constant="-58.5" id="a5B-Ph-mc6"/>
                 <constraint firstItem="1Pb-TW-a0q" firstAttribute="centerY" secondItem="qUr-j8-VFk" secondAttribute="centerY" constant="-3" id="eCU-B0-9N6"/>
@@ -151,7 +161,7 @@
                 <constraint firstItem="zwS-9g-W4r" firstAttribute="leading" secondItem="884-N0-Zan" secondAttribute="trailing" constant="21.5" id="v7v-Xl-HTG"/>
                 <constraint firstItem="qUr-j8-VFk" firstAttribute="leading" secondItem="NMV-tL-vs1" secondAttribute="leading" constant="-2" id="vcP-gw-a26"/>
                 <constraint firstItem="1Pb-TW-a0q" firstAttribute="top" secondItem="rcA-Ki-gWb" secondAttribute="bottom" constant="5" id="yBF-aX-o1e"/>
-                <constraint firstAttribute="trailing" secondItem="rcA-Ki-gWb" secondAttribute="trailing" id="zO2-18-F8O"/>
+                <constraint firstAttribute="trailing" secondItem="rcA-Ki-gWb" secondAttribute="trailing" constant="10" id="zO2-18-F8O"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -182,7 +192,7 @@
                 <outlet property="information" destination="qUr-j8-VFk" id="P29-B8-wHg"/>
                 <outlet property="rating" destination="zwS-9g-W4r" id="F1g-Xr-RGE"/>
             </connections>
-            <point key="canvasLocation" x="320" y="-350"/>
+            <point key="canvasLocation" x="230" y="-419"/>
         </view>
         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Yelp Rating" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3TE-8b-m2k">
             <rect key="frame" x="0.0" y="0.0" width="212" height="30"/>
@@ -195,7 +205,4 @@
             <point key="canvasLocation" x="385" y="785"/>
         </label>
     </objects>
-    <resources>
-        <image name="BeetTorrent" width="3000" height="3000"/>
-    </resources>
 </document>
